--- a/01_JavaScript/1_method/45.数组中对象元素按中文字母排序.md
+++ b/01_JavaScript/1_method/45.数组中对象元素按中文字母排序.md
@@ -1,68 +1,68 @@
 ```js
 var a = [
   {
-    en: 'Zimbabwe',
-    zh: '津巴布韦',
-    locale: 'ZW',
+    en: "Zimbabwe",
+    zh: "津巴布韦",
+    locale: "ZW",
     code: 263,
   },
   {
-    en: 'Zaire',
-    zh: '扎伊尔',
-    locale: 'ZR',
+    en: "Zaire",
+    zh: "扎伊尔",
+    locale: "ZR",
     code: 243,
   },
   {
-    en: 'Zambia',
-    zh: '赞比亚',
-    locale: 'ZM',
+    en: "Zambia",
+    zh: "赞比亚",
+    locale: "ZM",
     code: 260,
   },
 ];
 
 function compare(property) {
-  return function(obj1, obj2) {
+  return function (obj1, obj2) {
     const value1 = obj1[property];
     const value2 = obj2[property];
     // return value1 - value2; // 升序
-    return value1.localeCompare(value2, 'zh-Hans-CN', {
-      sensitivity: 'accent',
+    return value1.localeCompare(value2, "zh-Hans-CN", {
+      sensitivity: "accent",
     });
   };
 }
 
-var b = a.sort(compare('zh'));
+var b = a.sort(compare("zh"));
 ```
 
 ```js
 var b = [
-    {
-        "id":null,
-        "type":1,
-        "name":null,
-        "asCover":false
-    },
-        {
-        "id":null,
-        "type":1,
-        "name":null,
-        "asCover":true
-    },
-    {
-        "id":null,
-        "type":1,
-        "name":null,
-        "asCover":false
-    }
-]
+  {
+    id: null,
+    type: 1,
+    name: null,
+    asCover: false,
+  },
+  {
+    id: null,
+    type: 1,
+    name: null,
+    asCover: true,
+  },
+  {
+    id: null,
+    type: 1,
+    name: null,
+    asCover: false,
+  },
+];
 
 function compare(property) {
-  return function(obj1, obj2) {
+  return function (obj1, obj2) {
     const value1 = obj1[property];
     const value2 = obj2[property];
     return value2 - value1; // 升序
   };
 }
 
-var c = b.sort(compare('asCover'));
+var c = b.sort(compare("asCover"));
 ```
