add home design

--- a/09_Utilties/12_personal-websites/1. overview.md
+++ b/09_Utilties/12_personal-websites/1. overview.md
@@ -25,3 +25,9 @@ nginx -t
 ## 5. 更新
 
 目前使用的是 [cyberduck](https://cyberduck.io/)，后续考虑加入 CICD
+
+## 6. design 
+
+- home1:
+![home-image](./images/home.png "desktop") 
+![home-image](./images/mhome.png "mobile") 
