gatsby handle image and locale file

--- a/09_Utilties/12_personal-websites/2.Gatsby 入门.md
+++ b/09_Utilties/12_personal-websites/2.Gatsby 入门.md
@@ -31,3 +31,25 @@
 - Layout 组件
 
 实际就是将公用的提取出来而已。
+
+- 看下 gatsby-source-filesystem config
+
+初次配置 markdown 读不了，原来路径错了。
+
+```json
+    {
+      resolve: `gatsby-source-filesystem`,
+      // options: {
+      //   name: `images`,
+      //   path: `${__dirname}/src/images`,
+      // },
+      options: {
+        name: `src`,
+        path: `${__dirname}/src/`,
+      },
+    },
+```
+
+- image
+
+可以模糊加载啊。
