gatsby-source-filesystem multiple instance

--- a/09_Utilties/12_personal-websites/2.Gatsby 入门.md
+++ b/09_Utilties/12_personal-websites/2.Gatsby 入门.md
@@ -1,7 +1,7 @@
 - page 文件夹
 
 1. 里面是页面组件，其中 index 是入口文件。其他文件文件名也是路由名；
-2. src/page/index.jsx 是入口文件，支持直接写 jsx；   
+2. src/page/index.jsx 是入口文件，支持直接写 jsx；
 
 - components 文件夹
 
@@ -34,20 +34,23 @@
 
 - 看下 gatsby-source-filesystem config
 
-初次配置 markdown 读不了，原来路径错了。
+初次配置 markdown 读不了，原来路径错了。支持多个路径，但要注意，子路径要在父路径之前。
 
 ```json
-    {
-      resolve: `gatsby-source-filesystem`,
-      // options: {
-      //   name: `images`,
-      //   path: `${__dirname}/src/images`,
-      // },
-      options: {
-        name: `src`,
-        path: `${__dirname}/src/`,
-      },
-    },
+{
+  resolve: `gatsby-source-filesystem`,
+  options: {
+    name: `images`,
+    path: `${__dirname}/src/images`,
+  },
+},
+{
+  resolve: `gatsby-source-filesystem`,
+  options: {
+    name: `src`,
+    path: `${__dirname}/src/`,
+  },
+},
 ```
 
 - image
